Fixed average grade not showing & scrolling bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,7 @@ body {
 .ug-ptr--ptr {
   background: transparent;
   box-shadow: none;
+  pointer-events: none;
 }
 
 .ug-ptr--icon,
